# yumi

./: .gitignore  Cargo.toml  README.en.md  README.md  build.bat  build.rs  build.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml
module/: .gitignore  customize.sh  module.prop  rules.yaml  service.sh  uninstall.sh
module/config/: config.yaml
module/config/i18n/: en.ftl  zh.ftl
module/scripts/: disable_boost.sh
src/: common.rs  fas_types.rs  i18n.rs  logger.rs  main.rs  utils.rs
src/bpf/: bpf_abi.h  cpu_probe.c  fps_probe.c
src/monitor/: app_detect.rs  config.rs  cpu_monitor.rs  fps_monitor.rs  mod.rs  screen_detect.rs
src/scheduler/: config.rs  cpu_load_governor.rs  fas.rs  mod.rs  scheduler.rs
src/scheduler/fas/: controller.rs  fps_window.rs  frame_pipeline.rs  gear_state.rs  mod.rs  pid.rs  pid_jank.rs  policy_controller.rs  policy_mgmt.rs
updateInformation/: changelog.md  update.json
webui/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  main.ts
webui/src/router/: index.ts
webui/src/stores/: scheduler.ts
webui/src/utils/: bridge.ts  mock.ts
webui/src/views/: AppRulesView.vue  HomeView.vue  LogViewerView.vue
xtask/: Cargo.toml
xtask/src/: main.rs  zip_ext.rs
yumi-ebpf/: Cargo.toml
yumi-ebpf/src/: lib.rs
yumi-webui/src/i18n/: index.ts
yumi-webui/src/utils/: bridge.ts
yumi-webui/src/views/: ConfigEditorView.vue  HomeView.vue
yumi/src/: common.rs  utils.rs
yumi/src/monitor/: app_detect.rs
yumi/src/scheduler/: cpu_load_governor.rs  fas.rs  mod.rs
yumi_module/: module.prop
yumi_module/webroot/: index.html
(+8 files in other folders)
