[workspace]
members = ["xtask", "yumi-ebpf"]

[package]
name = "yumi"
version = "2.0.1"
edition = "2024"
authors = ["yuki <loyeturz@163.com>"]
license = "GPL-3.0-or-later"
description = "A powerful Android system daemon for monitoring and scheduling."
repository = "https://github.com/imacte/YukiCtrl"
keywords = ["android", "scheduler", "monitor"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
# --- 通用/核心 ---
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
libc = "0.2" 
log = "0.4"
once_cell = "1.21" 
lazy_static = "1.5.0"

# --- 异步与 eBPF (新增) ---
# Aya 用于加载和与内核 eBPF 程序交互
aya = "0.14.0"
mio = { version = "1.0", features = ["os-ext"] }
# Tokio 必须开启 full 或至少是 rt-multi-thread 和 macros 才能运行异步 FPS 循环
tokio = { version = "1", features = ["full"] }
bytes = "1.11"
futures = "0.3"
itoa = "1.0"

# --- Monitor 带来的依赖 ---    
inotify = "0.11.1"
regex = "1.12"
kobject-uevent = "0.2"
netlink-sys = "0.8"

# --- Scheduler 带来的依赖 ---
log4rs = "1.4"
nix = { version = "0.31.2", features = ["fs", "signal", "inotify"] }
glob = "0.3.3"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
intl-memoizer = "0.5.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1