[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "1.1.1"
zip = "8.4.0"
xshell = "0.2"
clap = { version = "4.4", features = ["derive"] }
